analizador/analizador.js
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/

import nodos from "../compilador/nodos.js";


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { programa: peg$parseprograma };
  var peg$startRuleFunction = peg$parseprograma;

  var peg$c0 = "=";
  var peg$c1 = ";";
  var peg$c2 = "(";
  var peg$c3 = ")";
  var peg$c4 = ",";
  var peg$c5 = "System.out.println";
  var peg$c6 = "if";
  var peg$c7 = "else";
  var peg$c8 = "switch";
  var peg$c9 = "{";
  var peg$c10 = "default";
  var peg$c11 = ":";
  var peg$c12 = "}";
  var peg$c13 = "while";
  var peg$c14 = "for";
  var peg$c15 = "break";
  var peg$c16 = "continue";
  var peg$c17 = "return";
  var peg$c18 = "case";
  var peg$c19 = "?";
  var peg$c20 = "+=";
  var peg$c21 = "-=";
  var peg$c22 = "++";
  var peg$c23 = "--";
  var peg$c24 = "||";
  var peg$c25 = "&&";
  var peg$c26 = "==";
  var peg$c27 = "!=";
  var peg$c28 = "<=";
  var peg$c29 = ">=";
  var peg$c30 = "typeof";
  var peg$c31 = ".";
  var peg$c32 = "true";
  var peg$c33 = "false";
  var peg$c34 = "\"";
  var peg$c35 = "'";
  var peg$c36 = "\\\"";
  var peg$c37 = "\\\\";
  var peg$c38 = "\\n";
  var peg$c39 = "\\r";
  var peg$c40 = "\\t";
  var peg$c41 = "int";
  var peg$c42 = "float";
  var peg$c43 = "string";
  var peg$c44 = "boolean";
  var peg$c45 = "char";
  var peg$c46 = "var";
  var peg$c47 = "void";
  var peg$c48 = "//";
  var peg$c49 = "/*";
  var peg$c50 = "*/";

  var peg$r0 = /^[<>]/;
  var peg$r1 = /^[+\-]/;
  var peg$r2 = /^[%*\/]/;
  var peg$r3 = /^[!\-]/;
  var peg$r4 = /^[0-9]/;
  var peg$r5 = /^[^\\"\n\r]/;
  var peg$r6 = /^[\0-\uFFFF]/;
  var peg$r7 = /^[a-zA-Z]/;
  var peg$r8 = /^[a-zA-Z0-9]/;
  var peg$r9 = /^[ \t\n\r]/;
  var peg$r10 = /^[\n]/;

  var peg$e0 = peg$literalExpectation("=", false);
  var peg$e1 = peg$literalExpectation(";", false);
  var peg$e2 = peg$literalExpectation("(", false);
  var peg$e3 = peg$literalExpectation(")", false);
  var peg$e4 = peg$literalExpectation(",", false);
  var peg$e5 = peg$literalExpectation("System.out.println", false);
  var peg$e6 = peg$literalExpectation("if", false);
  var peg$e7 = peg$literalExpectation("else", false);
  var peg$e8 = peg$literalExpectation("switch", false);
  var peg$e9 = peg$literalExpectation("{", false);
  var peg$e10 = peg$literalExpectation("default", false);
  var peg$e11 = peg$literalExpectation(":", false);
  var peg$e12 = peg$literalExpectation("}", false);
  var peg$e13 = peg$literalExpectation("while", false);
  var peg$e14 = peg$literalExpectation("for", false);
  var peg$e15 = peg$literalExpectation("break", false);
  var peg$e16 = peg$literalExpectation("continue", false);
  var peg$e17 = peg$literalExpectation("return", false);
  var peg$e18 = peg$literalExpectation("case", false);
  var peg$e19 = peg$literalExpectation("?", false);
  var peg$e20 = peg$literalExpectation("+=", false);
  var peg$e21 = peg$literalExpectation("-=", false);
  var peg$e22 = peg$literalExpectation("++", false);
  var peg$e23 = peg$literalExpectation("--", false);
  var peg$e24 = peg$literalExpectation("||", false);
  var peg$e25 = peg$literalExpectation("&&", false);
  var peg$e26 = peg$literalExpectation("==", false);
  var peg$e27 = peg$literalExpectation("!=", false);
  var peg$e28 = peg$literalExpectation("<=", false);
  var peg$e29 = peg$literalExpectation(">=", false);
  var peg$e30 = peg$classExpectation(["<", ">"], false, false);
  var peg$e31 = peg$classExpectation(["+", "-"], false, false);
  var peg$e32 = peg$classExpectation(["%", "*", "/"], false, false);
  var peg$e33 = peg$classExpectation(["!", "-"], false, false);
  var peg$e34 = peg$literalExpectation("typeof", false);
  var peg$e35 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e36 = peg$literalExpectation(".", false);
  var peg$e37 = peg$literalExpectation("true", false);
  var peg$e38 = peg$literalExpectation("false", false);
  var peg$e39 = peg$literalExpectation("\"", false);
  var peg$e40 = peg$classExpectation(["\\", "\"", "\n", "\r"], true, false);
  var peg$e41 = peg$literalExpectation("'", false);
  var peg$e42 = peg$classExpectation([["\0", "\uFFFF"]], false, false);
  var peg$e43 = peg$literalExpectation("\\\"", false);
  var peg$e44 = peg$literalExpectation("\\\\", false);
  var peg$e45 = peg$literalExpectation("\\n", false);
  var peg$e46 = peg$literalExpectation("\\r", false);
  var peg$e47 = peg$literalExpectation("\\t", false);
  var peg$e48 = peg$literalExpectation("int", false);
  var peg$e49 = peg$literalExpectation("float", false);
  var peg$e50 = peg$literalExpectation("string", false);
  var peg$e51 = peg$literalExpectation("boolean", false);
  var peg$e52 = peg$literalExpectation("char", false);
  var peg$e53 = peg$literalExpectation("var", false);
  var peg$e54 = peg$literalExpectation("void", false);
  var peg$e55 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e56 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  var peg$e57 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e58 = peg$literalExpectation("//", false);
  var peg$e59 = peg$classExpectation(["\n"], false, false);
  var peg$e60 = peg$anyExpectation();
  var peg$e61 = peg$literalExpectation("/*", false);
  var peg$e62 = peg$literalExpectation("*/", false);

  var peg$f0 = function(dcl) { return dcl };
  var peg$f1 = function(dcl) { return dcl };
  var peg$f2 = function(dcF) { return dcF };
  var peg$f3 = function(stmt) { return stmt };
  var peg$f4 = function(tipo, id, exp) { return exp };
  var peg$f5 = function(tipo, id, exp) { return crearNodo('declaracionVariable', { tipo, id, exp }) };
  var peg$f6 = function(tipo, id, params, bloque) { return crearNodo('dclFunc', { tipo, id, params: params || [], bloque }) };
  var peg$f7 = function(id, ids) { return ids };
  var peg$f8 = function(id, params) { return [id, ...params] };
  var peg$f9 = function(tipo, id) { return crearNodo('parametro', { tipo, id }) };
  var peg$f10 = function(exp) { return crearNodo('println', { exp }) };
  var peg$f11 = function(Bloque) { return Bloque };
  var peg$f12 = function(cond, stmtTrue, stmtFalse) { return stmtFalse };
  var peg$f13 = function(cond, stmtTrue, stmtFalse) { return crearNodo('if', { cond, stmtTrue, stmtFalse }) };
  var peg$f14 = function(exp, casos, stmtDefault) { return stmtDefault};
  var peg$f15 = function(exp, casos, stmtDefault) { return crearNodo('switch', { exp, casos, stmtDefault  }) };
  var peg$f16 = function(cond, stmt) { return crearNodo('while', { cond, stmt }) };
  var peg$f17 = function(init, cond, inc, stmt) {
      return crearNodo('for', { init, cond, inc, stmt })
    };
  var peg$f18 = function() { return crearNodo('break') };
  var peg$f19 = function() { return crearNodo('continue') };
  var peg$f20 = function(exp) { return crearNodo('return', { exp }) };
  var peg$f21 = function(exp) { return crearNodo('expresionStmt', { exp }) };
  var peg$f22 = function(dcls) { return crearNodo('bloque', { dcls }) };
  var peg$f23 = function(exp, stmt) { return crearNodo('casos', {exp, stmt}) };
  var peg$f24 = function(dcls) { return crearNodo('bloque', { dcls }) };
  var peg$f25 = function(dcl) { return dcl };
  var peg$f26 = function(exp) { return exp };
  var peg$f27 = function() { return null };
  var peg$f28 = function(exp_left, exp_right) { return crearNodo('expresionPrintln', { exp_left, exp_right }) };
  var peg$f29 = function(cond, expTrue, expFalse) { return crearNodo('ternario', { cond, expTrue, expFalse } ) };
  var peg$f30 = function(id, asgn) { return crearNodo('asignacion', { id, asgn }) };
  var peg$f31 = function(id, valor) { return crearNodo('incremento', { id, valor }) };
  var peg$f32 = function(id, valor) { return crearNodo('decremento', { id, valor }) };
  var peg$f33 = function(id) { return crearNodo('dato', { valor: 1, tipo: "int"}) };
  var peg$f34 = function(id, valor) { return crearNodo('incremento', { id, valor }) };
  var peg$f35 = function(id) { return crearNodo('dato', { valor: -1, tipo: "int"}) };
  var peg$f36 = function(id, valor) { return crearNodo('incremento', { id, valor }) };
  var peg$f37 = function(exp_left, operacion, exp_right) { return { tipo: operacion, exp_right } };
  var peg$f38 = function(exp_left, expansion) { 
  return expansion.reduce(
    (operacionAnterior, operacionActual) => {
      const { tipo, exp_right } = operacionActual
      return crearNodo('logico', { operacion:tipo, exp_left: operacionAnterior, exp_right })
    },
    exp_left
  )
};
  var peg$f39 = function(exp_left, operacion, exp_right) { return { tipo: operacion, exp_right } };
  var peg$f40 = function(exp_left, expansion) { 
  return expansion.reduce(
    (operacionAnterior, operacionActual) => {
      const { tipo, exp_right } = operacionActual
      return crearNodo('logico', { operacion:tipo, exp_left: operacionAnterior, exp_right })
    },
    exp_left
  )
};
  var peg$f41 = function(exp_left, operacion, exp_right) { return { tipo: operacion, exp_right } };
  var peg$f42 = function(exp_left, expansion) { 
  return expansion.reduce(
    (operacionAnterior, operacionActual) => {
      const { tipo, exp_right } = operacionActual
      return crearNodo('comparacion', { operacion:tipo, exp_left: operacionAnterior, exp_right })
    },
    exp_left
  )
};
  var peg$f43 = function(exp_left, operacion, exp_right) { return { tipo: operacion, exp_right } };
  var peg$f44 = function(exp_left, expansion) { 
  return expansion.reduce(
    (operacionAnterior, operacionActual) => {
      const { tipo, exp_right } = operacionActual
      return crearNodo('relacion', { operacion:tipo, exp_left: operacionAnterior, exp_right })
    },
    exp_left
  )
};
  var peg$f45 = function(exp_left, operacion, exp_right) { return { tipo: operacion, exp_right } };
  var peg$f46 = function(exp_left, expansion) { 
  return expansion.reduce(
    (operacionAnterior, operacionActual) => {
      const { tipo, exp_right } = operacionActual
      return crearNodo('aritmetica', { operacion:tipo, exp_left: operacionAnterior, exp_right })
    },
    exp_left
  )
};
  var peg$f47 = function(exp_left, operacion, exp_right) { return { tipo: operacion, exp_right } };
  var peg$f48 = function(exp_left, expansion) {
    return expansion.reduce(
      (operacionAnterior, operacionActual) => {
        const { tipo, exp_right } = operacionActual
        return crearNodo('aritmetica', { operacion:tipo, exp_left: operacionAnterior, exp_right })
      },
      exp_left
    )
};
  var peg$f49 = function(operacion, num) { return crearNodo('OperacionU', { operacion: operacion, exp_unica: num }) };
  var peg$f50 = function(callee, args) { return args };
  var peg$f51 = function(callee, params) {
  return params.reduce(
    (callee, args) => {
      return crearNodo('llamada', { callee, args: args || [] })
    },
    callee
  )
};
  var peg$f52 = function(arg, exp) { return exp };
  var peg$f53 = function(arg, args) { return [arg, ...args] };
  var peg$f54 = function(callee, args) { return crearNodo('llamada', { callee, args: args}) };
  var peg$f55 = function(id) { return crearNodo('referenciaVariable',  { id }) };
  var peg$f56 = function() { return crearNodo('dato', { valor: parseFloat(text()), tipo: "float"}) };
  var peg$f57 = function() { return crearNodo('dato', { valor: parseInt(text(), 10), tipo: "int"}) };
  var peg$f58 = function() { return crearNodo('dato',    { valor: text() === "true", tipo:"boolean"})};
  var peg$f59 = function(chars) { return crearNodo('dato',  { valor: chars.join(''), tipo: "string"});};
  var peg$f60 = function(chars) { return crearNodo('dato',    { valor: chars, tipo: "char"}); };
  var peg$f61 = function(exp) { return crearNodo('agrupacion', { exp }) };
  var peg$f62 = function(id) { return crearNodo('referenciaVariable',  { id }) };
  var peg$f63 = function() { return '"'; };
  var peg$f64 = function() { return "\\"; };
  var peg$f65 = function() { return "\n"; };
  var peg$f66 = function() { return "\r"; };
  var peg$f67 = function() { return "\t"; };
  var peg$f68 = function() { return text(); };
  var peg$f69 = function() { return text(); };
  var peg$f70 = function() { return text(); };
  var peg$f71 = function() { return text(); };
  var peg$f72 = function() { return text(); };
  var peg$f73 = function() { return text(); };
  var peg$f74 = function() { return text(); };
  var peg$f75 = function() { return text(); };
  var peg$f76 = function() { return text(); };
  var peg$f77 = function() { return text(); };
  var peg$f78 = function() { return text(); };
  var peg$f79 = function() { return text(); };
  var peg$f80 = function() { return text(); };
  var peg$f81 = function() { return text() };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseprograma() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$parseDeclaracion();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseDeclaracion();
    }
    s3 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseDeclaracion() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseDeclaracionVar();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f1(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      s2 = peg$parseFuncDcl();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f2(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        s2 = peg$parseStmt();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          peg$savedPos = s0;
          s0 = peg$f3(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parseDeclaracionVar() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;
